# Capstone

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt  simple_infer.py
configs/: dataset_upload.yaml  figure_extraction.yaml  inference.yaml  training.yaml
data/data-5k/: diagram_train_vn.json
data/line_segments/: dataset.json  dataset_cached.json
dataset/geometry_pages/: detail.json
dataset/geometry_pages_20251214_172806/: toan8-tap1-ketnoi-detail.json
dataset/geometry_pages_20251214_182441/: sbt-toan8-tap2-ketnoi-detail.json
dataset/geometry_pages_20251214_190117/: sbt-toan8-tap1-ketnoi-detail.json
dataset/geometry_pages_20251214_191829/: toan8-tap2-ketnoi-geometry_extracted.json
dataset/geometry_pages_20251214_193446/: toan8-tap2-chantroi-geometry_extracted.json
dataset/geometry_pages_20251215_141613/: toan9-tap1-chantroi-geometry_extracted.json
llm_engineering/: settings.py
llm_engineering/domains/: cleaned_documents.py  documents.py  exceptions.py  figure_documents.py  training_config.py  types.py
models/: modeling_geomagvit.py  modeling_utils.py  prompting_utils.py
notebooks/: figure_extractor.ipynb  pdf_exatractor.ipynb  pipeline_colab.ipynb  text_extract.ipynb  text_references.ipynb
pipelines/: dataset_upload.py  figure_extraction.py  inference.py  training.py
steps/crawl/: __init__.py  crawl_data.py
steps/inference/: __init__.py  test_inference.py
steps/train/: load_dataset.py  load_model.py  merge_model.py  push_model.py  test_inference.py  (+1 more)
tools/: draw_line_segments.py  run.py
(+27 files in other folders)
