[project]
name = "geouni"
version = "0.1.0"
description = "A Unified Model for Generating Geometry Diagrams, Problems and Problem Solutions"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.49.0",
    "peft==0.14.0",
    "numpy>=1.26.0,<2.0",
    "pillow==10.3.0",
    "einops==0.6.0",
    "diffusers==0.30.1",
    "pymongo>=4.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "ultralytics>=8.0.0",
    "python-doctr[torch]>=0.8.0",
    "PyMuPDF>=1.23.0",
    "zenml[server]==0.91.2",
    "click>=8.0.1",
    "doclayout-yolo>=0.0.3",
    "pytesseract>=0.3.10",
    "opencv-python>=4.9.0",
    "pyyaml>=6.0",
    "dill>=0.3.8",
    "datasets>=4.4.1",
    "paddleocr>=3.3.2",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_engineering"]
